import type { FormInputEvents } from '../../src/module';
import type { PTextareaProps, PTextareaSlots } from '../../src/runtime/components/textarea.vue';
import theme from '#build/pohon/textarea';
import { mountSuspended } from '@nuxt/test-utils/runtime';
import { flushPromises, mount } from '@vue/test-utils';
import { describe, expect, it } from 'vitest';
import { axe } from 'vitest-axe';
import Textarea from '../../src/runtime/components/textarea.vue';
import ComponentRender from '../component-render';
import { renderForm } from '../utils/form';

describe('textarea', () => {
  const sizes = Object.keys(theme.variants.size) as any;
  const variants = Object.keys(theme.variants.variant) as any;

  it.each([
    // Props
    ['with id', { props: { id: 'id' } }],
    ['with name', { props: { name: 'name' } }],
    ['with placeholder', { props: { placeholder: 'Search...' } }],
    ['with required', { props: { required: true } }],
    ['with disabled', { props: { disabled: true } }],
    ['with rows', { props: { rows: 5 } }],
    ['with autoresize', { props: { autoresize: true } }],
    ['with icon', { props: { icon: 'i-lucide-search' } }],
    ['with leading and icon', { props: { leading: true, icon: 'i-lucide-arrow-left' } }],
    ['with leadingIcon', { props: { leadingIcon: 'i-lucide-arrow-left' } }],
    ['with trailing and icon', { props: { trailing: true, icon: 'i-lucide-arrow-right' } }],
    ['with trailingIcon', { props: { trailingIcon: 'i-lucide-arrow-right' } }],
    ['with avatar', { props: { avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with avatar and leadingIcon', { props: { avatar: { src: 'https://github.com/benjamincanac.png' }, leadingIcon: 'i-lucide-arrow-left' } }],
    ['with avatar and trailingIcon', { props: { avatar: { src: 'https://github.com/benjamincanac.png' }, trailingIcon: 'i-lucide-arrow-right' } }],
    ['with loading', { props: { loading: true } }],
    ['with loading and avatar', { props: { loading: true, avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with loading trailing', { props: { loading: true, trailing: true } }],
    ['with loading trailing and avatar', { props: { loading: true, trailing: true, avatar: { src: 'https://github.com/benjamincanac.png' } } }],
    ['with loadingIcon', { props: { loading: true, loadingIcon: 'i-lucide-loader' } }],
    ...sizes.map((size: string) => [`with size ${size}`, { props: { size } }]),
    ...variants.map((variant: string) => [`with primary variant ${variant}`, { props: { variant } }]),
    ...variants.map((variant: string) => [`with neutral variant ${variant}`, { props: { variant, color: 'neutral' } }]),
    ['with ariaLabel', { attrs: { 'aria-label': 'Aria label' } }],
    ['with as', { props: { as: 'section' } }],
    ['with class', { props: { class: 'w-48' } }],
    ['with ui', { props: { pohon: { wrapper: 'ms-4' } } }],
    // Slots
    ['with default slot', { slots: { default: () => 'Default slot' } }],
    ['with leading slot', { slots: { leading: () => 'Leading slot' } }],
    ['with trailing slot', { slots: { trailing: () => 'Trailing slot' } }],
  ])('renders %s correctly', async (nameOrHtml: string, options: { props?: PTextareaProps; slots?: Partial<PTextareaSlots> }) => {
    const html = await ComponentRender(nameOrHtml, options, Textarea);
    expect(html).toMatchSnapshot();
  });

  it('passes accessibility tests', async () => {
    const wrapper = await mountSuspended(Textarea, {
      props: {
        placeholder: 'Placeholder',
        leadingIcon: 'i-lucide-user',
        trailingIcon: 'i-lucide-check',
        rows: 5,
        required: true,
      },
    });
    expect(await axe(wrapper.element)).toHaveNoViolations();
  });

  it.each([
    ['with .trim modifier', { props: { modelModifiers: { trim: true } } }, { input: 'input  ', expected: 'input' }],
    ['with .number modifier', { props: { modelModifiers: { number: true } } }, { input: '42', expected: 42 }],
    ['with .lazy modifier', { props: { modelModifiers: { lazy: true } } }, { input: 'input', expected: 'input' }],
    ['with .nullable modifier', { props: { modelModifiers: { nullable: true } } }, { input: '', expected: null }],
    ['with .optional modifier', { props: { modelModifiers: { optional: true } } }, { input: '', expected: undefined }],
  ])('%s works', async (_nameOrHtml: string, options: { props?: any; slots?: any }, spec: { input: any; expected: any }) => {
    const wrapper = mount(Textarea, {
      ...options,
    });

    const input = wrapper.find('textarea');
    await input.setValue(spec.input);

    expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [[spec.expected]] });
  });

  it('with .lazy modifier updates on change only', async () => {
    const wrapper = mount(Textarea, {
      props: {
        modelModifiers: { lazy: true },
      },
    });

    const input = wrapper.find('textarea');
    await input.trigger('update');
    expect(wrapper.emitted()).toMatchObject({ });

    await input.trigger('change');
    expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [['']] });
  });

  describe('emits', () => {
    it('update:modelValue event', async () => {
      const wrapper = mount(Textarea);

      const input = wrapper.find('textarea');
      await input.setValue('bob@dylan.com');

      expect(wrapper.emitted()).toMatchObject({ 'update:modelValue': [['bob@dylan.com']] });
    });

    it('change event', async () => {
      const wrapper = mount(Textarea);

      const input = wrapper.find('textarea');
      await input.setValue('bob@dylan.com');

      expect(wrapper.emitted()).toMatchObject({ change: [[{ type: 'change' }]] });
    });

    it('blur event', async () => {
      const wrapper = mount(Textarea);
      const input = wrapper.find('textarea');
      await input.trigger('blur');
      expect(wrapper.emitted()).toMatchObject({ blur: [[{ type: 'blur' }]] });
    });
  });

  describe('form integration', async () => {
    async function createForm(validateOn?: Array<FormInputEvents>, eagerValidation?: boolean) {
      const wrapper = await renderForm({
        props: {
          validateOn,
          validateOnInputDelay: 0,
          async validate(state: any) {
            if (state.value !== 'valid') {
              return [{ name: 'value', message: 'Error message' }];
            }
            return [];
          },
        },
        slotTemplate: `
        <PFormField name="value" :eager-validation="eagerValidation">
          <PTextarea id="input" v-model="state.value" />
        </PFormField>
        `,
        slotVars: {
          eagerValidation,
        },
      });
      const input = wrapper.find('#input');
      return {
        wrapper,
        input,
      };
    }

    it('validate on blur works', async () => {
      const { input, wrapper } = await createForm(['blur']);
      await input.trigger('blur');
      await flushPromises();
      expect(wrapper.text()).toContain('Error message');

      await input.setValue('valid');
      await input.trigger('blur');
      await flushPromises();
      expect(wrapper.text()).not.toContain('Error message');
    });

    it('validate on change works', async () => {
      const { input, wrapper } = await createForm(['change']);
      await input.trigger('change');
      await flushPromises();
      expect(wrapper.text()).toContain('Error message');

      input.setValue('valid');
      await input.trigger('change');
      await flushPromises();
      expect(wrapper.text()).not.toContain('Error message');
    });

    it('validate on input works', async () => {
      const { input, wrapper } = await createForm(['input'], true);
      await input.setValue('value');
      await flushPromises();
      expect(wrapper.text()).toContain('Error message');

      await input.setValue('valid');
      await flushPromises();
      expect(wrapper.text()).not.toContain('Error message');
    });

    it('validate on input without eager validation works', async () => {
      const { input, wrapper } = await createForm(['input']);

      await input.setValue('value');
      await flushPromises();
      expect(wrapper.text()).not.toContain('Error message');

      await input.trigger('blur');

      await input.setValue('value');
      await flushPromises();
      expect(wrapper.text()).toContain('Error message');

      await input.setValue('valid');
      await flushPromises();
      expect(wrapper.text()).not.toContain('Error message');
    });
  });
});
