// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textarea > renders with ariaLabel correctly 1`] = `
"<div class=""><textarea rows="3" aria-label="Aria label"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with as correctly 1`] = `
"<section class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</section>"
`;

exports[`textarea > renders with autoresize correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with avatar and leadingIcon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with avatar and trailingIcon correctly 1`] = `"<div class=""><textarea rows="3"></textarea><span class=""><span data-pohon="avatar-root"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-pohon="avatar-image"></span></span><span class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true"></span></span></div>"`;

exports[`textarea > renders with avatar correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span data-pohon="avatar-root"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-pohon="avatar-image"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with class correctly 1`] = `
"<div class="w-48"><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with default slot correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>Default slot
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with disabled correctly 1`] = `
"<div class=""><textarea rows="3" disabled=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with icon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:search" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with id correctly 1`] = `
"<div class=""><textarea id="id" rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leading and icon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leading slot correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class="">Leading slot</span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with leadingIcon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:arrow-left" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading and avatar correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with loading trailing and avatar correctly 1`] = `"<div class=""><textarea rows="3"></textarea><span class=""><span data-pohon="avatar-root"><img src="https://github.com/benjamincanac.png" width="32" height="32" data-pohon="avatar-image"></span></span><span class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true"></span></span></div>"`;

exports[`textarea > renders with loading trailing correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if--><span class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true"></span></span>
</div>"
`;

exports[`textarea > renders with loadingIcon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea><span class=""><span class="iconify i-lucide:loader" aria-hidden="true"></span></span>
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with name correctly 1`] = `
"<div class=""><textarea name="name" rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant ghost correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant none correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant outline correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant soft correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with neutral variant subtle correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with placeholder correctly 1`] = `
"<div class=""><textarea rows="3" placeholder="Search..."></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant ghost correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant none correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant outline correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant soft correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with primary variant subtle correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with required correctly 1`] = `
"<div class=""><textarea rows="3" required=""></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with rows correctly 1`] = `
"<div class=""><textarea rows="5"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size lg correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size md correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size sm correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size xl correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with size xs correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`textarea > renders with trailing and icon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if--><span class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true"></span></span>
</div>"
`;

exports[`textarea > renders with trailing slot correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if--><span class="">Trailing slot</span>
</div>"
`;

exports[`textarea > renders with trailingIcon correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if--><span class=""><span class="iconify i-lucide:arrow-right" aria-hidden="true"></span></span>
</div>"
`;

exports[`textarea > renders with ui correctly 1`] = `
"<div class=""><textarea rows="3"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
